--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,19 +1,47 @@
-main {
-    width: 100%;
+* {
+    font-family: Montserrat;
+}
+.main {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
-
-body {
+main {
+    display: flex;
+    flex-direction: row;
     background: linear-gradient(-45deg, #ee7752, #ead248, #23a6d5);
     background-size: 400% 400%;
     animation: gradient 5s ease infinite;
+    overflow: hidden;
+}
+aside {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+aside h1 {
+    font-weight: bold;
+    font-size: 3.5rem;
+}
+aside p {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    text-align: center;
+}
+.text-center h1 {
+    font-family: "Roboto", sans-serif;
+}
+body {
     height: 100vh;
 }
 .form {
-    height: 75%;
+    height: 85%;
     width: 400px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -25,7 +53,7 @@ body {
     width: 70%;
 }
 .input-width {
-    width: 90px;
+    width: 100px;
 }
 .GoogleIcon {
     width: 250px;
@@ -43,6 +71,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.nowe {
+    font-size: 14px;
+    cursor: pointer;
+}
+.nowe:hover {
+    text-decoration: underline;
 }
 
 @keyframes gradient {
@@ -66,5 +101,33 @@ body {
     .avatar {
         max-height: 280px;
         max-width: 280px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .form {
+        height: 100%;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+    }
+    .avatar {
+        max-height: 280px;
+        max-width: 280px;
+    }
+    aside {
+        display: none;
+    }
+}
+
+@media screen and (max-height: 770px) {
+    .form {
+        height: 100%;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+    }
+    main {
+        background: linear-gradient(-45deg, #fff, #fff);
+    }
+    aside {
+        display: none;
     }
 }
