--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -5,11 +5,12 @@
     width: 80%;
     float: left;
     padding: 40px 40px 0 40px;
-    border-left: 1px solid grey;
+    border-left: 2px solid rgb(255, 160, 35);
     height: 800px;
 }
 .rbc-event:hover {
-    background-color: rgb(156, 0, 0);
+    background-color: rgb(156, 0, 0) !important;
+    color: white !important;
 }
 .btn-dark {
     width: 130px;
@@ -20,7 +21,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid gray;
+    border-bottom: 2px solid rgb(255, 160, 35);
 }
 header h1 {
     color: rgb(255, 160, 35);
@@ -54,7 +55,7 @@ li:hover {
 }
 .rbc-header:nth-child(6),
 .rbc-header:nth-child(7) {
-    background-color: rgb(255, 220, 175);
+    background-color: rgb(255, 160, 35);
 }
 .rbc-day-bg:hover {
     background-color: #e6e6e6;
